Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
   <table>
-    <tr>city</tr>
+    <tr></tr>
+      <th>Name</th>
+      <th>Phone Number</th>
+      <th>Bringing</th>
     <tr>state</tr>
     <tr></tr>
     <tr></tr>
