--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table>
     <tr></tr>
-      <th>Name</th>
+      <th>City</th>
       <th>Phone Number</th>
       <th>Bringing</th>
     <tr>state</tr>
