--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table>
     <tr></tr>
       <th>City</th>
-      <th>Phone Number</th>
+      <th>State</th>
       <th>Bringing</th>
     <tr></tr>
     <tr></tr>
