--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr></tr>
       <th>City</th>
       <th>State</th>
-      <th>Bringing</th>
+      <th>2017 estimate</th>
     <tr></tr>
     <tr></tr>
     <tr></tr>
