--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <table>
     <tr></tr>
       <th>City</th>
+      <th>Street</th>
+      <th>2017 estimate</th>
     <tr></tr>
     <tr></tr>
     <tr></tr>
