Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table>
     <tr>
       <th>Strret</th>
-      <th>Street</th>
+      <th>City</th>
       <th>2017 estimate</th>
     </tr>
     <tr></tr>
