--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <th>2017 estimate</th>
     </tr>
     <tr>
-      <td>
-        
-      </td>
+      <td>New York</td>
     </tr>
     <tr></tr>
     <tr></tr>
