Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <td>8,622,698</td>
     </tr>
     <tr></tr>
+      <td>California</td>
+      <td>Los Angeles</td>
     <tr></tr>
     <tr></tr>
   </table>
